--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "lottie-react-native": "^2.6.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-lottie": "^1.2.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-screens": "^2.9.0",
