--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
     "expo-barcode-scanner": "~8.2.1",
+    "expo-constants": "~9.1.1",
+    "expo-local-authentication": "~9.1.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "lottie-react-native": "^2.6.1",
